terraform/kubernetes/manifests/postgres/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: postgres
  labels:
    istio-injection: disabled
  annotations:
    argocd.argoproj.io/sync-wave: "-2"
