terraform/kubernetes/manifests/postgres/tcp-route.yaml
apiVersion: gateway.networking.k8s.io/v1alpha2
kind: TCPRoute
metadata:
  name: postgres-pooler
  namespace: postgres
  annotations:
    argocd.argoproj.io/sync-wave: "2"
spec:
  parentRefs:
    - name: private
      namespace: istio-ingress-internal
      sectionName: postgres
  rules:
    - backendRefs:
        - name: postgres-pooler-rw
          port: 5432
